tests/errors/lambda_type_error.err
Type Error: Expected `int` but got `list<char>` on arg #1 for function `_`
1: fn _(a: int) -> int { a } ("foo")
                              ^
